finish messages section

--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -18,7 +18,7 @@
                             <span class="text-danger" *ngIf="!message.dateRead
                                 && message.senderUsername !== username">(unread)</span>
                             <span class="text-success" *ngIf="message.dateRead
-                                && message.senderUsername !== username">(read {{ message.dateRead | timeago }})</span>
+                                && message.senderUsername !== username">(read {{ message.dateRead + 'Z' | timeago }})</span>
                         </small>
                     </div>
                     <p>{{ message.content }}</p>
