--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -42,7 +42,7 @@
             </tr>
         </thead>
         <tbody class="align-middle">
-            <tr *ngFor="let message of messages"
+            <tr [hidden]="loading" *ngFor="let message of messages"
                 routerLink="{{ container === 'Outbox'
                     ? '/members/' + message.recipientUsername
                     : '/members/' + message.senderUsername }}"
@@ -67,7 +67,10 @@
                 </td>
                 <td>{{ message.messageSent | timeago }}</td>
                 <td>
-                    <button class="btn btn-danger">
+                    <button
+                        (click)="$event.stopPropagation()"
+                        (click)="deleteMessage(message.id)"
+                        class="btn btn-danger">
                         Delete
                     </button>
                 </td>
@@ -76,7 +79,7 @@
     </table>
 </div>
 
-<div class="d-flex fixed-bottom justify-content-center" *ngIf="pagination && messages && messages.length > 0">
+<div class="d-flex fixed-bottom justify-content-center" *ngIf="!loading && pagination && messages && messages.length > 0">
     <pagination
         [boundaryLinks]="true"
         [totalItems]="pagination.totalItems"
